src/objects/Currency_Director_Currencies__c.object
<CustomObject>
    <fields>
        <fullName>Currency_Director__c</fullName>
        <label>Currency Director</label>
        <referenceTo>Currency_Director__c</referenceTo>
        <relationshipName>Currency_Director_Currencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Currency_Director_Base_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Currency Director Base Currency ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Rate_Update_Date__c</fullName>
        <label>Last Rate Update (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Rate_Update_Rate__c</fullName>
        <label>Last Rate Update (Rate)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Currency Director Currency</label>
    <nameField>
        <label>Currency Director Currency (ISO)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Director Currencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>